objects/User_Preference_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Cadence_Platform__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cadence Platform</label>
        <referenceTo>Cadence_Platform__c</referenceTo>
        <relationshipLabel>User Preference Details</relationshipLabel>
        <relationshipName>User_Preference_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <label>Folder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mfg_Release_Platform</label>
        <referenceTo>Mfg_Release_Platforms__c</referenceTo>
        <relationshipLabel>User Preference Details</relationshipLabel>
        <relationshipName>User_Preference_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page_Link__c</fullName>
        <label>Page Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Page_Title__c</fullName>
        <label>Page Title</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipLabel>User Preference Details</relationshipLabel>
        <relationshipName>User_Preference_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Releases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search Releases</label>
        <referenceTo>Product_Manual__c</referenceTo>
        <relationshipLabel>User Preference Details</relationshipLabel>
        <relationshipName>User_Preference_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Searches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Favorite Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notification Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Releases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Folder</label>
        <referenceTo>User_Folder__c</referenceTo>
        <relationshipLabel>User Preference Details</relationshipLabel>
        <relationshipName>User_Preference_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Preference__c</fullName>
        <label>User Preference</label>
        <referenceTo>User_Preference__c</referenceTo>
        <relationshipLabel>User Preference Details</relationshipLabel>
        <relationshipName>User_Preference_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Preference Detail</label>
    <nameField>
        <displayFormat>U-{00000}</displayFormat>
        <label>User Preference Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Preference Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>